[project]
name = "iris-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crossfiledialog>=1.0.0",
    "pyduinocli>=0.35.0",
    "pywin32>=311 ; platform_system == 'Windows'",
    "requests>=2.32.4",
    "textual>=5.3.0",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
# pyduinocli = { path = "../pyduinocli", editable = true }
# pyduinocli = { git = "https://github.com/IRIS-Digital-Dosimeter/pyduinocli" }
